--- a/application/helpers/dompdf/lib/fonts/log.htm
+++ b/application/helpers/dompdf/lib/fonts/log.htm
@@ -1,1 +1,1 @@
-<span style='color: #000'>73 frames</span>	<span style='color: #900'>7,168 KB</span>	<span style='color: #090'>1,064.46 ms</span>	<span style='color: #009' title='Quirksmode'><span style='color: #c00'>ON</span></span><br />
+<span style='color: #000'>69 frames</span>	<span style='color: #900'>8,960 KB</span>	<span style='color: #090'>158.34 ms</span>	<span style='color: #009' title='Quirksmode'><span style='color: #0c0'>OFF</span></span><br />
